@@ -38,6 +38,8 @@ git-annex (5.2015022) UNRELEASED; urgency=medium
   * fromkey --force: Skip test that the key has its content in the annex.
   * fromkey: Add stdin mode.
   * registerurl: New plumbing command for mass-adding urls to keys.
+  * remotedaemon: Fixed support for notifications of changes to gcrypt
+    remotes, which was never tested and didn't quite work before.
 
  -- Joey Hess <id@joeyh.name>  Thu, 19 Feb 2015 14:16:03 -0400
 
